<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TES Alchemy Reference</string>
    <string name="action_settings">Settings</string>
    
    <!-- Menu Activity strings -->
    <string name="menu_title">Alchemy Reference</string>
    <string name="search_by_label_text">Search by:</string>
    <string name="effect_button_text">Effect</string>
    <string name="ingredient_button_text">Ingredient</string>
    
    <!-- Effect Search Activity strings -->
    <string name="search_by_effect">Search by Effect</string>
    <string name="search_by_effect_title">Effect</string>
    <string name="matching_ingredients_label">Ingredients with effect:</string>

    <!-- Ingredient Search Activity strings -->
    <string name="search_for_ingredient">Search for Ingredient</string>
    <string name="search_for_ingredient_title">Ingredient</string>
    <string name="all_ingredients_label">All ingredients:</string>
    
    <!-- Ingredient Activity strings -->
    <string name="default_title">Not set</string>
    <string name="ingredient_matching_effect">Ingredients with the same effect:</string>
    <string name="select_effect_prompt">Select an effect from above</string>
    
    <!-- Common Activity strings -->
    <string name="back_button">Back button</string>
    <string name="home_button">Home button</string>
    
    <!-- Exception strings -->
    <string name="database_copying_error">An error occurred when copying the database. Error was: </string>
    <string name="message_sedning_error">An error occurred when sending operation complete response. Error was: </string>
    <string name="database_create_error">Error setting up database.</string>
    
    <!-- Progress dialogue strings -->
    <string name="loading_title">Loading</string>
    <string name="loading_message">Please wait…</string>
    
    <!-- Intent keys -->
    <string name="ingredient_extra_key">IngredientExtra</string>
</resources>
